--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 absl-py==0.6.1
 astor==0.7.1
+Augmentor==0.2.3
 backcall==0.1.0
 bleach==3.0.2
+cycler==0.10.0
 decorator==4.3.0
 defusedxml==0.5.0
 entrypoints==0.2.3
+future==0.17.1
 gast==0.2.0
 grpcio==1.17.1
 h5py==2.9.0
@@ -22,8 +25,10 @@ jupyter-core==4.4.0
 Keras==2.2.4
 Keras-Applications==1.0.6
 Keras-Preprocessing==1.0.5
+kiwisolver==1.0.1
 Markdown==3.0.1
 MarkupSafe==1.1.0
+matplotlib==3.0.2
 mistune==0.8.4
 nbconvert==5.4.0
 nbformat==4.4.0
@@ -39,6 +44,7 @@ prompt-toolkit==2.0.7
 protobuf==3.6.1
 ptyprocess==0.6.0
 Pygments==2.3.1
+pyparsing==2.3.0
 python-dateutil==2.7.5
 PyYAML==3.13
 pyzmq==17.1.2
@@ -52,6 +58,7 @@ termcolor==1.1.0
 terminado==0.8.1
 testpath==0.4.2
 tornado==5.1.1
+tqdm==4.28.1
 traitlets==4.3.2
 wcwidth==0.1.7
 webencodings==0.5.1
