--- a/requirements.txt
+++ b/requirements.txt
@@ -49,9 +49,11 @@ python-dateutil==2.7.5
 PyYAML==3.13
 pyzmq==17.1.2
 qtconsole==4.4.3
+scikit-learn==0.20.2
 scipy==1.2.0
 Send2Trash==1.5.0
 six==1.12.0
+sklearn==0.0
 tensorboard==1.12.1
 tensorflow-gpu==1.12.0
 termcolor==1.1.0
